# osmAG-from-cad

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  osmAG.osm
area_graph_segment/: BATCH_PROCESSING_README.md  CMakeLists.txt  README.md  README_multi_alpha.md  SPIKE_REMOVAL_GUIDE.md  batch_process_png.py  plot_room_areas.py  room_areas.csv  test_multi_alpha.py
area_graph_segment/config/: params.yaml
area_graph_segment/examples/: area_graph_segmentation.cpp
area_graph_segment/include/: TopoGeometry.h  VoriGraph.h  WGS84toCartesian.h  roomGraph.h
area_graph_segment/include/export/: OsmAGExporter.h
area_graph_segment/include/geometry/: GeometryUtils.h
area_graph_segment/include/passage/: PassageProcessor.h
area_graph_segment/include/polygon/: PolygonProcessor.h
area_graph_segment/include/qt/: QImageVoronoi.h
area_graph_segment/include/room/: RoomProcessor.h
area_graph_segment/include/utils/: ParamsLoader.h
area_graph_segment/src/: osmAGExport.cpp  osmAGExport_old.cpp  roomGraph.cpp
area_graph_segment/src/cgal/: AlphaShape.cpp
area_graph_segment/src/export/: OsmAGExporter.cpp
area_graph_segment/src/geometry/: GeometryUtils.cpp
area_graph_segment/src/passage/: PassageProcessor.cpp
area_graph_segment/src/polygon/: PolygonProcessor.cpp
area_graph_segment/src/qt/: QImageVoronoi.cpp
area_graph_segment/src/room/: RoomProcessor.cpp
area_graph_segment/test/: example.cpp  test_area_graph.cpp
cad2osm/: README.md
cad2osm/config/: params.yaml
cad2osm/data_dxf/: SIST-F1_clear.dxf  SIST_f1_latest1.dxf
cad2osm/gui/: LICENSE  README.md  README_Language_Switch.md  demo_language_switch.py  main.py  requirements.txt  start_gui.py  test_language.py
data_dxf/: SIST-F1_filtered_20241126_211945_report.txt  图层信息_SIST-F1.dxf_20241126_211652.txt  图层信息_SIST-F1.dxf_20241203_120531.txt
osmAG_doc/: osmAG_standards_24.12.md  osmAG_standards_25.6.md  update_25-6-03.md
script/: dwg2dxf_oda.py  dxf2svg.py  dxf_filter.py  dxf_layer_info.py  seged_png2svg.py  svg2gridmap.py  svg2png.py
src/: Denoise.cpp  RoomDect.cpp
svg_to_osm/: README.md  converter.py  main.py  settings.py
test/: example.cpp
validations/: README_auto_repair_tools.md  README_test_compatibility_fix_id.md  README_test_compatibility_semantic.md  auto_repair_osmag_fixid.py  auto_repair_osmag_semantic.py  fix_capability_matrix.md  test_compatibility_fixid.py  test_compatibility_semantic.py
(+266 files in other folders)
